force-app/main/default/objects/Pickup_Line_Item__c/Pickup_Line_Item__c.object-meta.xml
<CustomObject>
    <description>An item picked up from a donation location.</description>
    <label>Pickup Line Item</label>
    <nameField>
        <displayFormat>PLI-{0000000}</displayFormat>
        <label>Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pickup Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>