force-app/main/default/objects/Pickup_Line_Item__c/fields/Pickup__c.field-meta.xml
<CustomField>
    <fullName>Pickup__c</fullName>
    <label>Received From Pickup</label>
    <referenceTo>Pickup__c</referenceTo>
    <relationshipName>Pickup_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>