force-app/main/default/objects/Pickup_Line_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Pickup Line Items</relationshipLabel>
    <relationshipName>Pickup_Line_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>