force-app/main/default/objects/Pickup_Line_Item__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Either a quantity or weight is required. If a weight is entered, then quantity is calculated based on weight divided by the product weight.</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>