force-app/main/default/objects/Pickup_Line_Item__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Value of the items in this line item</description>
    <label>Value</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>