force-app/main/default/objects/Pickup_Line_Item__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <inlineHelpText>Either a quantity or weight is required. If a weight is entered, then quantity is calculated based on weight divided by the product weight.</inlineHelpText>
    <label>Weight (lbs)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>