force-app/main/default/objects/Pickup_Line_Item__c/validationRules/Pickup_Line_Item_Quantity_or_Weight.validationRule-meta.xml
<ValidationRule>
    <fullName>Pickup_Line_Item_Quantity_or_Weight</fullName>
    <active>true</active>
    <description>Either Quantity or Weight must be entered.</description>
    <errorConditionFormula>(ISBLANK(Quantity__c) || (Quantity__c  = 0))
&amp;&amp; (ISBLANK(Weight__c) ||(Weight__c = 0))</errorConditionFormula>
    <errorMessage>Either a quantity or a weight is required. If a weight is entered, then quantity is calculated based on weight divided by the product weight.</errorMessage>
</ValidationRule>